style.css
/* START GLOBAL RULES */
:root {
    --blue-color: #2980b9;
    --green-color: #7fb13d;
    --purple-color: #8e44ad;
    --sky-blue-color: #3498db;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: #f3f6f9;
    font-family: "Open Sans", sans-serif;
    letter-spacing: 0.3px;
}

.container {
    margin-right: auto;
    margin-left: auto;
}

@media (min-width: 768px) {
    .container {
        width: 700px;
    }

}

@media (min-width: 992px) {
    .container {
        width: 900px;
    }
}

@media (min-width: 1200px) {
    .container {
        width: 1100px;
    }
}

/* END GLOBAL RULES */
.jobs-list {
    padding-top: 50px;
    padding-bottom: 50px;
}

.jobs-list .heading-text {
    text-align: center;
    margin-bottom: 50px;
}

@media (max-width: 767px) {
    .jobs-list .heading-text {
        padding-left: 15px;
        padding-right: 15px;
    }
}

.jobs-list .heading-text h1 {
    text-transform: uppercase;
    font-size: 28px;
    margin-bottom: 50px;
    position: relative;
}

.jobs-list .heading-text h1::after {
    content: "";
    position: absolute;
    width: 80px;
    height: 2px;
    bottom: 0;
    left: 50%;
    background-color: var(--blue-color);
    transform: translate(-50%, 25px);
}

.jobs-list .heading-text p {
    color: #8b8b8b;
    line-height: 1.7;
}

.jobs-list .jobs-box {
    text-transform: capitalize;
    margin-bottom: 25px;
}

.jobs-list .jobs-box .job-item {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 2px;
    padding: 25px;
    background-color: white;
}

.jobs-list .jobs-box .job-item .job-details {
    display: flex;
    align-items: center;
    width: 100%;
}

@media (max-width: 767px) {
    .jobs-list .jobs-box .job-item .job-details {
        margin-bottom: 25px;
    }
}

@media (min-width: 768px) {
    .jobs-list .jobs-box .job-item .job-details {
        width: 53%;
    }
}

.jobs-list .jobs-box .job-item .job-image {
    width: 125px;
    height: 105px;
    background-color: #dcdcdcb0;
    padding: 3px;
    border-radius: 4px;
}

.jobs-list .jobs-box .job-item .job-image img {
    width: 100%;
    height: 100%;
}

.jobs-list .jobs-box .job-item .job-infos {
    margin-left: 30px;
}

.jobs-list .jobs-box .job-item .job-infos .job-type {
    font-size: 10px;
    color: white;
    padding: 2px 15px;
    font-weight: bold;
    border-radius: 3px;
}

.jobs-list .jobs-box .job-item .job-infos .job-type.freelancer {
    background-color: var(--green-color);
}

.jobs-list .jobs-box .job-item .job-infos .job-type.part-time {
    background-color: var(--blue-color);
}

.jobs-list .jobs-box .job-item .job-infos .job-type.full-time {
    background-color: var(--purple-color);
}

.jobs-list .jobs-box .job-item .job-infos .job-type.partnership {
    background-color: var(--sky-blue-color);
}

.jobs-list .jobs-box .job-item .job-infos .job-role {
    margin-top: 7px;
    margin-bottom: 5px;
}

.jobs-list .jobs-box .job-item .job-infos .job-metadata span {
    font-size: 12px;
    color: #a0a0a0;
}

.jobs-list .jobs-box .job-item .job-infos .job-metadata>span:not(:first-child) {
    margin-left: 10px;
}

@media (max-width: 768px) {
    .jobs-list .jobs-box .job-item .job-infos .job-role {
        margin-top: 10px;
        margin-bottom: 10px;
    }

    .jobs-list .jobs-box .job-item .job-infos .job-metadata>span {
        display: block;
        margin-bottom: 10px;
    }

    .jobs-list .jobs-box .job-item .job-infos .job-metadata>span:not(:first-child) {
        margin-left: 0;
    }
}

.jobs-list .jobs-box .job-item .job-infos .job-metadata span span {
    color: rgba(0, 0, 0, 0.719);
}


.jobs-list .jobs-box .job-item .job-location .job-city {
    font-size: 20px;
}

.jobs-list .jobs-box .job-item .job-location .job-country {
    display: block;
    font-size: 13px;
    color: #a0a0a0;
}

.jobs-list .jobs-box .job-item .job-pricing {
    text-align: center;
}

.jobs-list .jobs-box .job-item .job-pricing span {
    display: block;
    font-weight: bold;
    margin-bottom: 6px;
}

.jobs-list .jobs-box .job-item .job-pricing a {
    display: block;
    text-decoration: none;
    padding: 4px 35px;
    background-color: var(--blue-color);
    color: white;
    font-size: 12px;
    border-radius: 3px;
}

.jobs-list button {
    display: block;
    color: white;
    background-color: var(--blue-color);
    padding: 14px 47px;
    text-transform: capitalize;
    font-weight: bold;
    border: none;
    border-radius: 3px;
    margin: 0 auto;
    cursor: pointer;
}

